--- a/index.html
+++ b/index.html
@@ -27,31 +27,7 @@
     </style>
     <title>Document</title>
 
-    <script>
-            function menu (event) {
-                let ul = event.target.parentNode.querySelector('ul')  
-                if (ul.style.display =='' || ul.style.display ==='none') ul.style.display ='block'
-                else ul.style.display ='none'
-            }
-
-                document.addEventListener('DOMContentLoaded', function(event){
-                for (let item of document.querySelectorAll('.item')) {
-                    item.addEventListener('click', menu)
-                }
-                document.querySelector('button').addEventListener('click', function(event) {
-                    let text = document.querySelector('textarea')
-                    if (text.value.length == 0) alert('нет комментария')
-                    else {
-                        let comment = document.querySelector('.comment').cloneNode()
-                        let date = new Date()
-                        comment.innerHTML = `${date.getDay()} . ${date.getMonth()}. ${date.getFullYear()}. 
-                                            ${date.getHours()}: ${date.getMinutes()} ${text.value}`
-                        text.before(comment)
-                    }
-                })
-        })
-
-    </script>
+ 
   
 </head>
 <body>   
@@ -61,28 +37,50 @@
     <div><label>Согласен с правилами сайта</label> <input type="checkbox" name="rules" value="1"/></div>
     <div><input type="submit" name="sbutton" value="Отправить"/></div>
     </form> -->
-   <ul>
-        <li>
-            <span class="item">Пункт меню 1</span>
-            <ul>
-                <li>Пункт подменю 1 </li>
-                <li>Пункт подменю 2 </li>
-            </ul>
-        </li>
-        <li> 
-            <span class="item">Пункт меню 2</span>
-            <ul>
-                <li>Пункт подменю 1 </li>
-                <li>Пункт подменю 2 </li>
-             </ul>
-        </li>
-    </ul>
-    <div id="comments"> 
-        <h2>Комментарии (<span id="count">0</span>):</h2>
-        <div class="comment"></div>
-        <textarea placeholder="Ваш комментарий"></textarea>
-        <br/>
-        <button>Отправить</button>
-    </div>
+  <div tabindex="0" style="text-align: center; border: 1px solid #000; height: 300px; width: 300px; position: absolute;">БЛОК</div>
+ 
 </body>
+<script>
+//     function mouseover (event) {
+//         let p = document.createElement('p')
+//         p.innerHTML ='Hello World'
+//         event.target.append(p)
+//     }
+
+//     function mousedown (event) {
+//         event.target.querySelector('p').style.fontWeight = 'bold'
+//     }
+
+//     function mouseup (event) {
+//         event.target.querySelector('p').style.fontWeight = 'normal'
+//     }
+
+//     function mouseout (event) {
+//         event.target.querySelector('p').remove()
+//     }
+
+//    document.addEventListener('DOMContentLoaded', function(event){
+//     let div = document.querySelector('div')
+//     div.addEventListener('mouseover',mouseover)
+//     div.addEventListener('mousedown',mousedown)
+//     div.addEventListener('mouseup',mouseup)
+//     div.addEventListener('mouseout',mouseout)
+//    })
+function keydown(event) {
+    let div  = document.querySelector('div')
+    let yu ='0'
+    console.log(parseFloat(yu))
+    // let top = parseFloat(div.style.top) ? parseFloat(div.style.top): 0
+    // let left = parseFloat(div.style.left) ? parseFloat(div.style.left): 0
+    // if (event.code =="ArrowUp") div.style.top = top -10 + 'px'
+    // else if (event.code =="ArrowDown") div.style.top = top +10 + 'px'
+    // else if (event.code =="ArrowLeft") div.style.left = left -10 + 'px'
+    // else if (event.code =="ArrowRight") div.style.left = left +10 + 'px'
+}
+
+document.addEventListener('DOMContentLoaded', function(event){
+    let div = document.querySelector('div').addEventListener('keydown',keydown)
+})
+
+</script>
 </html>
